# DS-LINGUISTICS-MEG-MASC

./: .env.slurm  .gitattributes  .gitignore  .gitmodules  README.md  annotations_cache.csv  custom.el  main.py  pyproject.toml  pytest.ini  update-context.py
data/: phoneme_info.csv
linguistics/: analysis.py  env.py
linguistics/figures/: plotting.py
linguistics/reader/: data.py
notebooks/: generate_plots.py  interactive_analysis.py
org-notes/: plan.org  work-log.org
output/: 01_decoding_results.csv  02_decoding_results.csv  04_decoding_results.csv  06_decoding_results.csv  07_decoding_results.csv  08_decoding_results.csv  09_decoding_results.csv  10_decoding_results.csv
output/12-10-2025/: 01_decoding_results.csv  02_decoding_results.csv  03_decoding_results.csv  04_decoding_results.csv  05_decoding_results.csv  06_decoding_results.csv  07_decoding_results.csv  08_decoding_results.csv  09_decoding_results.csv  10_decoding_results.csv  11_decoding_results.csv
output/17-10-2025-20-34/: 01_decoding_results.csv  02_decoding_results.csv  04_decoding_results.csv  05_decoding_results.csv  06_decoding_results.csv  07_decoding_results.csv  08_decoding_results.csv  09_decoding_results.csv  10_decoding_results.csv  11_decoding_results.csv
scripts/: 0-simple-analysis.py  1-run-single-smart-submit.sh  1-run-single-subject-slurm.sh  1-run-single-subject.py  2-run-single-subject-chunked-submit.sh  run-tests.sh
test/: test_annotations.py  test_first.py
test/caches/: annotations_cache.csv
writing/: notes.md  notes.tex  proposal.tex  refs.bib  tufte-book.cls
(+71 files in other folders)
