[project]
name = "ds-linguistics-meg-masc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.2",
    "mne>=1.10.1",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pip>=25.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]
