[project]
name = "ds-linguistics-meg-masc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax>=0.7.2",
    "matplotlib>=3.10.6",
    "mne>=1.10.1",
    "mne-bids>=0.17.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pip>=25.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.7",
    "toolz>=1.0.0",
    "tqdm>=4.67.1",
    "wordfreq>=3.1.1",
]
